--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -12,7 +12,7 @@
   # Downfall
   ##########################
   PB_FRA_Downfall:0 "Downfall"
-  PB_FRA_Downfall_desc:0 "\n\n\n\n\n\n"There is nothing preventing the enemy reaching Paris. We were fighting on our last line and it has been breached. I am helpless, I cannot intervene"\n\nToday marks the end of France's brief period of European domination, years of struggle all for nought and yet there are those that are convinced that victory can still be achieved; oh how wrong they are.\n\nCurrent Surrender Progress: £GFX_white_flag  §Y[?surrender_progress]§!\n"
+  PB_FRA_Downfall_desc:0 "\n\n\n\n\n\n"There is nothing preventing the enemy reaching Paris. We were fighting on our last line and it has been breached. I am helpless, I cannot intervene".\n\nToday marks the end of France's brief period of European domination, years of struggle all for nought and yet there are those that are convinced that victory can still be achieved; oh how wrong they are.\n\nCurrent Surrender Progress: £GFX_white_flag  §Y[?surrender_progress|%Y0]§!\n"
 
   ##########################
   # PEACE FLAGS
@@ -635,6 +635,10 @@
   French.94.d:0 ""
   French.94.a:0 "Oh How Sweet It Is To Hear Them Scream"
 
+  French.95.t:0 "German Troops Retreat Into Denmark"
+  French.95.d:0 "Much of the German high command and military remnants have fled from Holestein and into Danish lands, being welcomed as defenders of a free Europe and democratic europe, apparently. Yet inside sources tell us that the military situation within Denmark, and much of Scandanavia at this point, is chaotic. We could use the shock of the recent German collapse to quickly rush down an unprepared Scandinavia and secure a quick victory for the Pacte Revanchiste."
+  French.95.a:0 "Scandinavia Was Always Our Enemy Anyways"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -934,9 +938,14 @@
   French_personality.2.c:0 "A Little Out Of Pocket Money Won't Hurt"
 
   French_personality.3.t:0 "New Factory Opening In Paris"
-  French_personality.3.d:0 ""
+  French_personality.3.d:0 "A new steel manufacturing plant in Paris held a grand opening today, hundreds of local residents flocked the see the tourist like exhibition that the business owner held. Workers openly demonstrated how the machines worked, with many individuals being awed by the impressive scale of both the furnaces and assembly lines. During a speech that was being given by a foreman a small boy raised his hand and politely asked if he could work here, the factory subsequenty filled with cheerful laughs and the young lads face burnt a bright red."
   French_personality.3.a:0 "Wonderful"
   French_personality.3.b:0 "Can We Build Another One Of Those?"
+
+  French_personality.4.t:0 "The American Free Corps"
+  French_personality.4.d:0 "Wallonia found itself in an economic slump post Great-War, much of the nation turned to ash as a consequence of the devestating technologies that were released upon the nation and stationed troops found it hard to justify why the hell they were setting up tent next to puddles of toxic waste. The added issue of the UK not paying the full wages of the stationed American troops due to the economic devestation from the Great-War futher strained ties between the Commonwealth and Great Britain. Eventually many Americans crossed into France in the thousands after hearing promises of greater employement and pay. This defection has been the worst of its kind in all of British-American military history, additionally the persuasion of far-right individuals has filled these lost men with a hope for a new home and legacy, one they are ready to die for, if so needed."
+  French_personality.4.a:0 "As Long As They Swear Loyalty To France"
+  French_personality.4.b:0 "Thousands You Say?"
 
   French_postwar.1.t:0 "The SP Demand Hannover"
   French_postwar.1.d:0 ""
@@ -1643,9 +1652,9 @@
   ##########################
 
   PB_Pers_Charismatic_FRA_tt:0 "§CThis option is available because your leader is Charismatic§!"
-  PB_Pers_Intelligent_FRA_tt:0 "§CThis option is available because your leader is Intelligent!"
-  PB_Pers_Ambitious_FRA_tt:0 "§CThis option is available because your leader is Ambitious!"
-  PB_Pers_Diligent_FRA_tt:0 "§CThis option is available because your leader is Diligent!"
+  PB_Pers_Intelligent_FRA_tt:0 "§CThis option is available because your leader is Intelligent§!"
+  PB_Pers_Ambitious_FRA_tt:0 "§CThis option is available because your leader is Ambitious§!"
+  PB_Pers_Diligent_FRA_tt:0 "§CThis option is available because your leader is Diligent§!"
 
   FRA_SP_reshuffle_xavier:0 "The Current SP leader will be replaced with Xavier Vallat"
 
@@ -1753,6 +1762,11 @@
   PB_FRA_German_Partisan_Uprising_Start_tt:0 "The German Liberation Front will revolt"
 
   FRA_GLF_THINGY_OVER:0 "The German Liberation Front mechanic is over"
+
+  American_Free_Corps1_tt:0 "One Corps Franc Américain unit will spawn"
+  American_Free_Corps2_tt:0 "Two Corps Franc Américain units will spawn"
+
+  French_Scandi_Invasion_tt:0 "France will begin her conquests into Scandinavia"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
