--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -588,6 +588,10 @@
   PBNews.150.d:0 "The French garrison in Frankfurt has recently gone dead silent and reports of a nation wide revolt in Germany are becoming too numerous to ignore. France has not commented on the matter but foreign intelligence does support such claims of a German revolt. Many suspect the German Liberation Front to be responsible for the apparent uprising but concrete evidence on the matter is yet to be found, even if true many Germans in exile remain doubtful that this is supposed Free German organisation will achieve victory in their fight against France."
   PBNews.150.a:0 "Second Time's A Charm"
 
+  PBNews.151.t:0 "FRANCE INVADES SCANDINAVIA"
+  PBNews.151.d:0 "Following the defeat of Germany much of the remaining German military forces and high command have fled through Holestein and into Denmark. Stories quickly spreading around the known world about France's atrocities and brutalities during their invasion of Germany, highlighting to the democratic and free world about how much of a threat France poses. However despite the short peace within mainland Europe France has once again declared war, between the Pacte Revanchiste and Scandinavia. Officials believe that this time France won't be able to pull off a grand push agaisnt the tightly defended borders of Denmark."
+  PBNews.151.a:0 "Paris Grows Ever So Stronger"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
