Final FRA Scandi Push (I think)

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1970,22 +1970,22 @@
   FRA_Latin_Union_cn_ADJ:0 "Latin"
   FRA_Latin_Union_an_ADJ:0 "Latin"
 
-  IRE_FRA_puppet_ni:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_ni_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_ds:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_ds_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_rc:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_rc_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_an:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_an_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_cn:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_cn_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_lb:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_lb_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_ss:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_ss_DEF:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_jc:0 "Free Republic Of Ireland"
-  IRE_FRA_puppet_jc_DEF:0 "Free Republic Of Ireland"
+  IRE_FRA_puppet_ni:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_ni_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_ds:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_ds_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_rc:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_rc_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_an:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_an_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_cn:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_cn_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_lb:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_lb_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_ss:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_ss_DEF:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_jc:0 "Free Republic of Ireland"
+  IRE_FRA_puppet_jc_DEF:0 "Free Republic of Ireland"
   IRE_FRA_puppet_ni_ADJ:0 "Irish"
   IRE_FRA_puppet_rc_ADJ:0 "Irish"
   IRE_FRA_puppet_lb_ADJ:0 "Irish"
@@ -2019,6 +2019,81 @@
   SCH_FRA_Puppet_ds_ADJ:0 "Danish"
   SCH_FRA_Puppet_cn_ADJ:0 "Danish"
   SCH_FRA_Puppet_an_ADJ:0 "Danish"
+
+  SWE_FRA_Puppet_ni:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ni_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ds:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ds_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_rc:0 "Occupied Sweden"
+  SWE_FRA_Puppet_rc_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_an:0 "Occupied Sweden"
+  SWE_FRA_Puppet_an_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_cn:0 "Occupied Sweden"
+  SWE_FRA_Puppet_cn_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_lb:0 "Occupied Sweden"
+  SWE_FRA_Puppet_lb_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ss:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ss_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_jc:0 "Occupied Sweden"
+  SWE_FRA_Puppet_jc_DEF:0 "Occupied Sweden"
+  SWE_FRA_Puppet_ni_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_rc_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_lb_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_ss_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_jc_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_ds_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_cn_ADJ:0 "Swedish"
+  SWE_FRA_Puppet_an_ADJ:0 "Swedish"
+
+  NOR_FRA_Puppet_ni:0 "Occupied Norway"
+  NOR_FRA_Puppet_ni_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_ds:0 "Occupied Norway"
+  NOR_FRA_Puppet_ds_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_rc:0 "Occupied Norway"
+  NOR_FRA_Puppet_rc_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_an:0 "Occupied Norway"
+  NOR_FRA_Puppet_an_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_cn:0 "Occupied Norway"
+  NOR_FRA_Puppet_cn_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_lb:0 "Occupied Norway"
+  NOR_FRA_Puppet_lb_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_ss:0 "Occupied Norway"
+  NOR_FRA_Puppet_ss_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_jc:0 "Occupied Norway"
+  NOR_FRA_Puppet_jc_DEF:0 "Occupied Norway"
+  NOR_FRA_Puppet_ni_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_rc_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_lb_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_ss_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_jc_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_ds_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_cn_ADJ:0 "Norwegian"
+  NOR_FRA_Puppet_an_ADJ:0 "Norwegian"
+
+  DEN_Exile_ni:0 "Danish Government in Exile"
+  DEN_Exile_ni_DEF:0 "Danish Government in Exile"
+  DEN_Exile_ds:0 "Danish Government in Exile"
+  DEN_Exile_ds_DEF:0 "Danish Government in Exile"
+  DEN_Exile_rc:0 "Danish Government in Exile"
+  DEN_Exile_rc_DEF:0 "Danish Government in Exile"
+  DEN_Exile_an:0 "Danish Government in Exile"
+  DEN_Exile_an_DEF:0 "Danish Government in Exile"
+  DEN_Exile_cn:0 "Danish Government in Exile"
+  DEN_Exile_cn_DEF:0 "Danish Government in Exile"
+  DEN_Exile_lb:0 "Danish Government in Exile"
+  DEN_Exile_lb_DEF:0 "Danish Government in Exile"
+  DEN_Exile_ss:0 "Danish Government in Exile"
+  DEN_Exile_ss_DEF:0 "Danish Government in Exile"
+  DEN_Exile_jc:0 "Danish Government in Exile"
+  DEN_Exile_jc_DEF:0 "Danish Government in Exile"
+  DEN_Exilet_ni_ADJ:0 "Danish"
+  DEN_Exile_rc_ADJ:0 "Danish"
+  DEN_Exile_lb_ADJ:0 "Danish"
+  DEN_Exile_ss_ADJ:0 "Danish"
+  DEN_Exilet_jc_ADJ:0 "Danish"
+  DEN_Exile_ds_ADJ:0 "Danish"
+  DEN_Exile_cn_ADJ:0 "Danish"
+  DEN_Exile_an_ADJ:0 "Danish"
 
   
 
