The Eurasian Congress Assembles

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -421,6 +421,40 @@
   Russian.29.d:0 ""
   Russian.29.a:0 "Dear Lord"
 
+  #Glug Posting (If you mention this I will leave the mod)#
+  PB_RUS_eurasian_congress:0 "The Eurasian Congress"
+  PB_RUS_eurasian_congress_desc:0 "The Eurasian Congress has assembled yada yada yada add more stuff later when I am not tired.\n\nMembers of the Eurasian Congress: [?RUS.num_subjects]"
+  PB_RUS_targeted_industrial_invest_into_subjects:0 "Invest into [FROM.GetNameDef]"
+  PB_RUS_constantinople_question:0 "The Constantinople Question"
+  PB_RUS_create_pontic_state:0 "The Creation of a Pontic Nation State"
+  PB_RUS_unite_azerbaijani_people_in_persia:0 "Unite the Azerbaijani People in Persia"
+
+  Russian.30.t:0 "The Constantinople Question"
+  Russian.30.d:0 "Something something gotta figure out who to give Constantinople to"
+  Russian.30.a:0 "To the Turks"
+  Russian.30.b:0 "To the Greeks"
+  Russian.30.c:0 "To the Russians"
+  Russian.31.t:0 "Russia has Refused to Give us Constantinople"
+  Russian.31.d:0 ""
+  Russian.31.a:0 "Those Half-Human Slavs"
+  Russian.32.t:0 "Russia has Given us Constantinople"
+  Russian.32.d:0 ""
+  Russian.32.a:0 "An amazing occasion, let us celebrate with our Russian allies"
+  Russian.33.t:0 "[RUS.GetName] Demands the Creation of a nation for the Pontic Greeks"
+  Russian.33.d:0 "Wanting to further their Eurasianist ambitions and appearing as kind as possible, the Russians have demanded we end our oppression of the Pontic Greeks and even give them their own land to live in."
+  Russian.33.a:0 "We can't deny the Russians what they want"
+  Russian.33.b:0 "No it is Rightful [TUR.GetAdjective] Land, not Greek!"
+  Russian.34.t:0 "The Creation of the Pontic State"
+  Russian.34.d:0 ""
+  Russian.34.a:0 "The Pontic Greeks can finally live in peace"
+  Russian.35.t:0 "The Turks Deny our Request for the Pontics"
+  Russian.35.d:0 ""
+  Russian.35.a:0 "Their nationalism and Grecophobia gets the better of them"
+  Russian.36.t:0 "[RUS.GetName] Demands Special Trade Privileges"
+  Russian.36.d:0 ""
+  Russian.36.a:0 "We have to give it to them"
+  Russian.36.b:0 "We will stand strong against them"
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
