--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -2,6 +2,8 @@
 
  POL_autonomy_PB_Imperial_Autonomy:0 "Congress Poland"
  NOR_autonomy_PB_Personal_Union:0 "Kingdom of Norway"
+ PON_RUS_autonomy_PB_Imperial_Associate:0 "Pontus Governate"
+ PON_RUS_autonomy_PB_Imperial_Associate_DEF:0 "the Pontus Governate"
 
  VIN_Insurgency_ni:0 "Revolutionary Army of Vietnam"
  VIN_Insurgency_ni_DEF:0 "The Revolutionary Army of Vietnam"
