UK Work plus Main Menu theme fix

--- a/localisation/PB_Super_Events_l_english.yml
+++ b/localisation/PB_Super_Events_l_english.yml
@@ -30,7 +30,7 @@
   SPEVNT_Atom_Bomb_CLOSETEXT:0 "§OA NEW HELL IS LET LOOSE§!"
 
   SPEVNT_Second_Great_War:0 "THE SECOND GREAT WAR"
-  SPEVNT_Second_Great_War_TEXT:0 "Now may God bless you all, and may he defend the right. For it is evil things that we will be fighting against-brute force, bad faith, injustice, oppression and persecution-and against them I am certain that the right will prevail.\n§O-Neville Chamberlain-§!"
+  SPEVNT_Second_Great_War_TEXT:0 "With this prinicple, you may live to see man-made horrors beyond your comprehension\n§O-Nikola Tesla-§!"
   SPEVNT_Second_Great_War_CLOSETEXT:0 "§OHELL IS LET LOOSE§!"
 
   GFX_SPEVNT_Great_Balkan_War:0 "THE GREAT BALKAN WAR"
