--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -8314,12 +8314,12 @@ SAN_an_ADJ:0 "Indian"
  PON_an:0 "Pontic Greek State"
  PON_an_DEF:0 "the Pontic Greek State"
  PON_cn:0 "Pontic Greek State"
- PON_cn_DEF:0 "the Pontic Greek StateE"
+ PON_cn_DEF:0 "the Pontic Greek State"
  PON_lb:0 "Pontic Greek State"
  PON_lb_DEF:0 "the Pontic Greek State"
  PON_ss:0 "Pontic Commune"
  PON_ss_DEF:0 "the Pontic Commune"
- PON_jc:0 "Pontic CommuneE"
+ PON_jc:0 "Pontic Commune"
  PON_jc_DEF:0 "the Pontic Commune"
  PON_ni_ADJ:0 "Pontic"
  PON_rc_ADJ:0 "Pontic"
@@ -8329,6 +8329,31 @@ SAN_an_ADJ:0 "Indian"
  PON_ds_ADJ:0 "Pontic"
  PON_cn_ADJ:0 "Pontic"
  PON_an_ADJ:0 "Pontic"
+
+ FAL_ni:0 "Colonie d'Alger"
+ FAL_ni_DEF:0 "the Colonie d'Alger"
+ FAL_ds:0 "Colonie d'Alger"
+ FAL_ds_DEF:0 "the Colonie d'Alger"
+ FAL_rc:0 "Colonie d'Alger"
+ FAL_rc_DEF:0 "the Colonie d'Alger"
+ FAL_an:0 "Colonie d'Alger"
+ FAL_an_DEF:0 "the Colonie d'Alger"
+ FAL_cn:0 "Colonie d'Alger"
+ FAL_cn_DEF:0 "the Colonie d'Alger"
+ FAL_lb:0 "Colonie d'Alger"
+ FAL_lb_DEF:0 "the Colonie d'Alger"
+ FAL_ss:0 "Colonie d'Alger"
+ FAL_ss_DEF:0 "the Colonie d'Alger"
+ FAL_jc:0 "Pontic Commune"
+ FAL_jc_DEF:0 "the Colonie d'Alger"
+ FAL_ni_ADJ:0 "French-Algerian"
+ FAL_rc_ADJ:0 "French-Algerian"
+ FAL_lb_ADJ:0 "French-Algerian"
+ FAL_ss_ADJ:0 "French-Algerian"
+ FAL_jc_ADJ:0 "French-Algerian"
+ FAL_ds_ADJ:0 "French-Algerian"
+ FAL_cn_ADJ:0 "French-Algerian"
+ FAL_an_ADJ:0 "French-Algerian"
 
 ###################################
 # TEMPLATE
