Other small push

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1421,10 +1421,15 @@
   PB_FRA_The_End_Of_Time:0 "The End Of Time"
   PB_FRA_The_End_Of_Time_desc:0 "With hostile troops slowly advancing into core French territory we must embark on a grand campaign, one that will mainly see the defence of France, then-followed by the defeat of her enemies. Whilst resources are scarce and our reserves already mobolized we must have hope that victory is possible, else we may face another embarrassing defeat from the British and Germans, once again.\n\n"We can hear the sounds of war, and all the unpleasantries we had forgot about long ago. Ready your sons, for war is coming home." - Unknown French Officer"
   PB_FRA_Scrap_Campaigns:0 "Scrap Campaigns"
+  PB_FRA_Scrap_Campaigns_desc:0 "Our access to steel has been severly limited by enemy occupation. Some local officials and state administrators have implemented major scrap campaigns and voluntery steel donation workshops to help mitigate these shortcomings but we must elevate the issue onto a nation wide level if we are to address it fully. "
   PB_FRA_Mobile_Factories:0 "Mobile Factories"
+  PB_FRA_Mobile_Factories_desc:0 "Our efforts to mobolize our military industry onto wheels has not been in vein. Recent industrial complexes which had just been constructed were immediately swarmed by enemy forces, thus economic experts, or whats left of them, had thankfully had the foresight to modify some wheeled trucks with production based capabilities. Of course these factories on wheels are by no means a permanent replacement to the traditional factory complexes that we had once built, but they will sure as hell do a damn fine job as a temporary replacement."
   PB_FRA_Sacrifices_Must_Be_Made:0 "Sacrifices Must Be Made"
-  PB_FRA_Loot_The_Museums:0 "Loot The Museums" 
+  PB_FRA_Sacrifices_Must_Be_Made_desc:0 "Whilst it may seem counter-productive to convert our remaining civilian industries to weapon production facilities, especially when our populace is in a desperate need for various utensils and other conusmer goods, we must address the dire state of our military; or the lack thereof. We must remember that every gun produced is one which can be fired, and if we're lucky, kill a man."
+  PB_FRA_Loot_The_Museums:0 "Loot The Museums"
+  PB_FRA_Loot_The_Museums_desc:0 "There are hundreds of museums littered around France and all house functional or semi-functional weapons of war. From Great War rifles to 19th century artillery guns, whilst they may be old, and some barely even functional, they will have to do. Afterall beggers can't be choosers, can they?"  
   PB_FRA_Scorched_Earth_Tactics:0 "Scorched Earth Tactics"
+  PB_FRA_Scorched_Earth_Tactics_desc:0 "Everyday the horde kreeps closer and closer to our rump territories, barely held with tape at this point. But there is hope, if one could call it that. Secret legions stationed behind enemy lines have been increasingly ferocious in their efforts to bomb occupied infrastructure and if we could cordinate with the soldiers on where to allocate their restricted reserves of explosive material then we might be able to turn this damn war around."
   PB_FRA_Mobolize_The_Militias:0 "Mobolize The Militias"
   PB_FRA_Child_Soliders:0 "Child Soldiers"
   PB_FRA_Cutting_Corners:0 "Cutting Corners" 
@@ -1437,6 +1442,7 @@
   PB_FRA_Emergency_Fortifications_desc:0 "The Enemy needs to bleed, he needs to fight for every single piece of land we control.\n To make sure that our soldiers can accomplish this duty with high chances of success they need to fortify everywhere they desire. Dig trenches in those fields, build up sandbags at those street corners and do not forget to plant the hidden bombs underneath the floor. The weakling will fear more and more for their lives for every step they take."
   PB_FRA_Super_Weapon_Theories:0 "Super Weapon Theories" 
   PB_FRA_Mythical_Stories:0 "Mythical Stories"
+  PB_FRA_Mythical_Stories_desc:0 "The Frenchmen is like no other man on Earth, a direct ascendent of the holy angel of christ. He is blessed, disciplined, and unmatched by his so-called 'fellow human', but he is beyond human in so many ways. His skin is pure white, and his mind full of knowledge, he is both Adam and Noah; bringer of civilization and forebearer of a brave new world. May God bless his soul, because he is going to need one hell of a fucking miracle to win this war."
   PB_FRA_Sons_Of_Charlemagne:0 "Sons Of Charlemagne"
   PB_FRA_Do_It_For_France:0 "Do It For France"
   PB_FRA_Hold_The_Line:0 "Hold The Line"
