Germany Modding Stuff
- more stuff for diplo

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -925,6 +925,9 @@
 
   PB_GER_Invite_Netherlands_to_Hamburg:0 "Invite the [HOL.GetFlag]Netherlands to join the League"
   PB_GER_Invite_Netherlands_to_Hamburg_desc:0 "The Netherlands are vital in protecting our flank against the French. We have to make sure that they will join our alliance before a potential with France can begin. We can help them fortify their border and the Rhine and modernize their army."
+
+  PB_GER_Invite_Wallonia_to_Hamburg:0 "Invite [WLA.GetFlag]Wallonia to join the League"
+  PB_GER_Invite_Wallonia_to_Hamburg_desc:0 ""
   
 
   ##########################
