--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1413,7 +1413,19 @@
   PB_FRA_Italia_Liberated:0 "Italia Liberated"
   PB_FRA_Scandinavia_Domesticated:0 "Scandinavia Domesticated" 
   PB_FRA_All_Four_Corners_Of_The_World:0 "All Four Corners Of The Globe"
-  
+  PB_FRA_Let_Tam_Go:0 "Let Tam Go"
+  PB_FRA_Put_Loch_In_Place:0 "Put Loch In Place"
+  PB_FRA_The_Cornwall_Garrison:0 "De Gaulle's Garrison"
+  PB_FRA_Arthurs_Cornwall:0 "Arthur's Cornwall"
+  PB_FRA_Keep_Jim_Griffiths_Close:0 "Keep Griffiths Close"
+  PB_FRA_Ally_With_Huges_Clique:0 "Ally With Huge's Clique"
+  PB_FRA_Let_Rosenberg_Reign:0 "Let Rosenberg Reign"
+  PB_FRA_Lipperts_Junta_Will_Do_Just_Fine:0 "Lipperts Junta Will Do Just Fine"
+  PB_FRA_Seperate_But_Equal:0 "Seperate But Equal"
+  PB_FRA_Not_Our_Problem_Anymore:0 "Not Our Problem Anymore"
+  PB_FRA_A_Helvetica_Coup:0 "A Helvetica Coup"
+  PB_FRA_Europes_Little_Heart_Of_Gold:0 "Europe's Little Heart Of Gold"
+
   FRA_French_Scare_Campaigns:0 "French Scare Campaigns"
 
   PB_FRA_The_State_That_Gives:0 "The State That Gives"
