--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -185,7 +185,7 @@ PB_Semi_Modern_Military:0 "Semi Modernized Military"
 PB_Great_War_Military:0 "Great War Era Military"
 PB_Pre_Great_War_Army:0 "Pre Great War Military"
 
-SocDev_Menu_Explanation:0 "§YSocial Development§! is a rough metric of various factors in a country.\n\nDecisions made throughout the campaign will §Gpositively§! or §Rnegatively§! affect the rate at which social progress is made. Development can top off at either 100% or -100%. If a development level is not already at maximum, it will increase to the next development level. If a development level reaches -100%, it will regress to the previous level unless at the lowest possible level."
+SocDev_Menu_Explanation:0 "§YSocial Development§! is a rough metric of various factors in a country.\n\nDecisions made throughout the campaign will §Gpositively§! or §Rnegatively§! affect the rate at which social progress is made. At §Cmaximum§! level, development will no longer increase. Development can top off at either 100% or -100%. If a development level is not already at maximum, it will increase to the next development level. If a development level reaches -100%, it will regress to the previous level unless at the lowest possible level."
 
 PB_Poverty_Small_Progress_tt:0 "Our current §YPoverty Rate§! will begin to §Gimprove§! by a small amount"
 PB_Poverty_Moderate_Progress_tt:0 "Our current §YPoverty Rate§! will begin to §Gimprove§! by a moderate amount"
