--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -94,7 +94,7 @@
   PB_FRA_Attack_Germany_tt:0 "A series of events will fire, eventually leading to war with the §P[GER.GetName]§!"
   PB_FRA_Dutch_Crisis_tt:0 "Germany is likely to defend the §P[HOL.GetName]§! against any demands we make, this may lead to war"
   PB_FRA_Spacing_tt:0 "        \n" # ---- Use this to space focus effects out
-  PB_FRA_A_New_World_Order_tt:0 "§gAny ideas or bonuses you may have gotten from the Endsieg tree will be removed§!"
+  PB_FRA_A_New_World_Order_tt:0 "§gAny ideas or bonuses you may have gotten from the Endsieg tree will be removed\n\nFocuses considered expansionist will lower your stability and war support so make sure to keep a balance.§!"
 
   ##########################
   # Factionalism/Nationalistic Fervour
@@ -1425,6 +1425,18 @@
   PB_FRA_Not_Our_Problem_Anymore:0 "Not Our Problem Anymore"
   PB_FRA_A_Helvetica_Coup:0 "A Helvetica Coup"
   PB_FRA_Europes_Little_Heart_Of_Gold:0 "Europe's Little Heart Of Gold"
+  PB_FRA_The_Piedmont_Conference:0 "The Piedmont Conference"+
+  PB_FRA_Reaffirm_Ties:0 "Reaffirm Ties"
+  PB_FRA_A_Gift_Of_Friendship:0 "A Gift Of Friendship"
+  PB_FRA_Continue_The_Occupation:0 "Continue The Occupation"
+  PB_FRA_Transfer_The_Outer_Venetian_States:0 "Transfer The Outer Venetian States"
+  PB_FRA_Everything_But_Tyrol:0 "Everything But Tyrol"
+  PB_FRA_Reinstate_Hallgren:0 "Reinstate Hallgren"
+  PB_FRA_Talk_With_Engdahl:0 "Talk With Engdahl"
+  PB_FRA_Transfer_Holestein_To_Alemania:0 "Transfer Holstein To Alemania"
+  PB_FRA_Seize_Holestein_For_Ourselves:0 "Seize Holestein For Ourselves"
+  PB_FRA_Take_The_Damn_Islands:0 "Take The Damn Islands"
+  PB_FRA_Invade_The_Danish_Government_In_Exile:0 "Invade The Danish Government In Exile"
 
   FRA_French_Scare_Campaigns:0 "French Scare Campaigns"
 
