--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3842,32 +3842,32 @@ SAN_an_ADJ:0 "Indian"
  SAX_cn_ADJ:0 "Saxon"
  SAX_an_ADJ:0 "Saxon"
 
- HAN_ni:0 "Administrative Zone Of Hannover"
- HAN_ni_DEF:0 "The Administrative Zone Of Hannover"
- HAN_ds:0 "Administrative Zone Of Hannover"
- HAN_ds_DEF:0 "The Administrative Zone Of Hannover"
- HAN_rc:0 "Kingdom of Hannover"
- HAN_rc_DEF:0 "The Kingdom of Hannover"
- HAN_an:0 "Kingdom of Hannover"
- HAN_an_DEF:0 "The Kingdom of Hannover"
- HAN_cn:0 "Kingdom of Hannover"
- HAN_cn_DEF:0 "The Kingdom of Hannover"
- HAN_lb:0 "Kingdom of Hannover"
- HAN_lb_DEF:0 "The Kingdom of Hannover"
- HAN_ss:0 "Kingdom of Hannover"
- HAN_ss_DEF:0 "The Kingdom of Hannover"
- HAN_jc:0 "Hannoverian People's Republic"
- HAN_jc_DEF:0 "The Hannoverian People's Republic"
- HAN_ni_ADJ:0 "Hannoverian"
- HAN_rc_ADJ:0 "Hannoverian"
- HAN_lb_ADJ:0 "Hannoverian"
- HAN_ss_ADJ:0 "Hannoverian"
- HAN_jc_ADJ:0 "Hannoverian"
- HAN_ds_ADJ:0 "Hannoverian"
- HAN_cn_ADJ:0 "Hannoverian"
- HAN_an_ADJ:0 "Hannoverian"
+ HAN_ni:0 "Alemania"
+ HAN_ni_DEF:0 "Alemania"
+ HAN_ds:0 "Alemania"
+ HAN_ds_DEF:0 "Alemania"
+ HAN_rc:0 "Alemania"
+ HAN_rc_DEF:0 "Alemania"
+ HAN_an:0 "Alemania"
+ HAN_an_DEF:0 "Alemania"
+ HAN_cn:0 "Alemania"
+ HAN_cn_DEF:0 "Alemania"
+ HAN_lb:0 "Alemania"
+ HAN_lb_DEF:0 "SP Alemania"
+ HAN_ss:0 "Alemania"
+ HAN_ss_DEF:0 "Alemania"
+ HAN_jc:0 "Alemania"
+ HAN_jc_DEF:0 "Alemania"
+ HAN_ni_ADJ:0 "French-Hannoverian"
+ HAN_rc_ADJ:0 "French-Hannoverian"
+ HAN_lb_ADJ:0 "French-Hannoverian"
+ HAN_ss_ADJ:0 "French-Hannoverian"
+ HAN_jc_ADJ:0 "French-Hannoverian"
+ HAN_ds_ADJ:0 "French-Hannoverian"
+ HAN_cn_ADJ:0 "French-Hannoverian"
+ HAN_an_ADJ:0 "French-Hannoverian"
  
- HAN_SP:0 "SP Alemania"
+ HAN_SP:0 "Alemania"
  HAN_SP_DEF:0 "La Sécurité Publique Etat Alemania"
  
 
