--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -271,6 +271,10 @@ SocDev.9.t:0 "Westernization Increases"
 SocDev.9.d:0 "The nation has progressed further on the path to modern, western civilization. Old tribal and gerontocratic practices are being abandoned more and more for Western-style cultural mainstays. Communities become more and more reliant on modern agricultural methods, while some move to the new industrial capitals where smog now chokes the once empty skies. Old ideas fall to the wayside as a new generation looks to Europe for the future.\n\nOur nation shifts further towards becoming a modern, industrial and most importantly Westernized state."
 SocDev.9.a:0 "Civilization, Ho!"
 
+SocDev.10.t:0 "A More Modern Military"
+SocDev.10.d:0 ""
+SocDev.10.a:0 "\"Sir, yes Sir!\""
+
 ##########################
 # GOVERNMENT TYPE
 ##########################
