--- a/localisation/unit_l_english.yml
+++ b/localisation/unit_l_english.yml
@@ -395,7 +395,7 @@ heavy_armor:0 "Heavy Landship"
 heavy_armor_desc:0 ""
 light_armor:0 "Light Landship"
 light_armor_desc:0 ""
-gw_basic_automat:0 "Basic Automat"
+gw_basic_automat:0 "Duopod"
 gw_basic_automat_desc:0 ""
 logistics_company:0 "Logistics Company"
 logistics_company_desc:0 ""
