--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -300,10 +300,10 @@
  BSQ_cn_ADJ:0 "Basque"
  BSQ_an_ADJ:0 "Basque"
 
- SWI_ni:0 "Swiss Confederation"
- SWI_ni_DEF:0 "The Swiss Confederation"
- SWI_ds:0 "Swiss Confederation"
- SWI_ds_DEF:0 "The Swiss Confederation"
+ SWI_ni:0 "Helvetica"
+ SWI_ni_DEF:0 "Helvetica"
+ SWI_ds:0 "Helvetica"
+ SWI_ds_DEF:0 "Helvetica"
  SWI_rc:0 "Swiss Confederation"
  SWI_rc_DEF:0 "The Swiss Confederation"
  SWI_an:0 "Swiss Confederation "
@@ -7650,22 +7650,22 @@ SAN_an_ADJ:0 "Indian"
  IST_cn_ADJ:0 "Italian"
  IST_an_ADJ:0 "Italian"
 
- CON_ni:0 "Administrative Zone Of Cornwall"
- CON_ni_DEF:0 "The Administrative Zone Of Cornwall"
- CON_ds:0 "Administrative Zone Of Cornwall"
- CON_ds_DEF:0 "The Administrative Zone Of Cornwall"
- CON_rc:0 "Administrative Zone Of Cornwall"
- CON_rc_DEF:0 "The Administrative Zone Of Cornwall"
- CON_an:0 "Administrative Zone Of Cornwall"
- CON_an_DEF:0 "The Administrative Zone Of Cornwall"
- CON_cn:0 "Administrative Zone Of Cornwall"
- CON_cn_DEF:0 "The Administrative Zone Of Cornwall"
- CON_lb:0 "Administrative Zone Of Cornwall"
- CON_lb_DEF:0 "The Administrative Zone Of Cornwall"
- CON_ss:0 "Administrative Zone Of Cornwall"
- CON_ss_DEF:0 "The Administrative Zone Of Cornwall"
- CON_jc:0 "Administrative Zone Of Cornwall"
- CON_jc_DEF:0 "The Administrative Zone Of Cornwall"
+ CON_ni:0 "Cornwall"
+ CON_ni_DEF:0 "Cornwall"
+ CON_ds:0 "Cornwall"
+ CON_ds_DEF:0 "Cornwall"
+ CON_rc:0 "Cornwall"
+ CON_rc_DEF:0 "Cornwall"
+ CON_an:0 "Cornwall"
+ CON_an_DEF:0 "Cornwall"
+ CON_cn:0 "Cornwall"
+ CON_cn_DEF:0 "Cornwall"
+ CON_lb:0 "Cornwall"
+ CON_lb_DEF:0 "Cornwall"
+ CON_ss:0 "Cornwall"
+ CON_ss_DEF:0 "Cornwall"
+ CON_jc:0 "Cornwall"
+ CON_jc_DEF:0 "Cornwall"
  CON_ni_ADJ:0 "Cornish"
  CON_rc_ADJ:0 "Cornish"
  CON_lb_ADJ:0 "Cornish"
